Fix style for blog avatars photos spacing

--- a/src/theme/BlogPostItem/Header/Author/styles.module.css
+++ b/src/theme/BlogPostItem/Header/Author/styles.module.css
@@ -1,6 +1,7 @@
 .avatar {
   flex-direction: column;
   align-items: center;
+  margin-top: var(--ifm-spacing-vertical);
 }
 
 .imageContainer {
